--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@600;family=Lora:wght@400;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
-  <title>HTMX with Sinatra</title>
+  <title>Demo Jam 2026</title>
 
   <style>
     body {
