--- a/views/index.erb
+++ b/views/index.erb
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.7/dist/htmx.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@600;family=Lora:wght@400;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@600;family=Lora:wght@400;700&family=Lato:wght@400;700&display=swap" rel="preconnect">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="preconnect" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="preconnect" />
   <title>Demo Jam 2026</title>
 
   <style>
